centered layout and fixed spacing on all screen sixes

--- a/src/style/components/_create.scss
+++ b/src/style/components/_create.scss
@@ -5,7 +5,7 @@
   box-shadow: 0 1px 4px rgba(0,0,0,0.24);
   background: #fff;
   border-radius: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 16px;
   position: relative;
   overflow: hidden;
 }
@@ -246,4 +246,8 @@
     }
   }
 }
-
+@media (min-width: 1200px) {
+  .landing-page .createOuter {
+    margin-left: auto;
+  }
+}
