--- a/src/style/components/_landing-container.scss
+++ b/src/style/components/_landing-container.scss
@@ -43,6 +43,14 @@
     margin-top: -177px;
   }
   .marginTopL57{
-    margin-top: -28px;
+    margin-top: -32px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .marginTopLarge {
+    margin-top: -160px;
+  }
+  .marginTopL57{
+    margin-top: -51px;
   }
 }
