--- a/src/style/layout/_content.scss
+++ b/src/style/layout/_content.scss
@@ -66,6 +66,9 @@
   .grid-container {
     width: 1170px;
   }
+  .landing-page .grid-container {
+    padding-right: 30px;
+  }
 }
 .grid-container-fluid {
   margin-right: auto;
